--- a/arch/arm64/configs/angler_defconfig
+++ b/arch/arm64/configs/angler_defconfig
@@ -664,3 +664,6 @@ CONFIG_MSM_GCC_8994=y
 CONFIG_MACH_HUAWEI=y
 CONFIG_DEVTMPFS=y
 CONFIG_DMA_CMA=y
+CONFIG_USB_MSM_OTG=y
+CONFIG_USB_SUPPORT=y
+CONFIG_EXTCON=y
