--- a/arch/arm64/boot/dts/huawei/msm8994-angler-rev-101.dts
+++ b/arch/arm64/boot/dts/huawei/msm8994-angler-rev-101.dts
@@ -37,5 +37,14 @@
 			pinctrl-0 = <&blsp1_uart2_default>;
 			pinctrl-1 = <&blsp1_uart2_sleep>;
 		};
+
 	};
+};
+
+&usb_otg {
+	status = "okay";
+};
+
+&usb_host {
+	status = "okay";
 };
