--- a/arch/arm64/boot/dts/qcom/msm8994.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8994.dtsi
@@ -15,6 +15,7 @@
 
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/clock/qcom,gcc-msm8994.h>
+#include <dt-bindings/reset/qcom,gcc-msm8994.h>
 
 / {
 	model = "Qualcomm Technologies, Inc. MSM 8994";
@@ -249,6 +250,9 @@
 			 <&clock_gcc GCC_USB2_HS_PHY_SLEEP_CLK>;
 		clock-names = "iface", "core", "sleep";
 
+		resets = <&clock_gcc GCC_USB2_PHY_BCR>,
+			 <&clock_gcc GCC_USB_HS_BCR>;
+		reset-names = "phy", "link";
 		status = "disabled";
 	};
 
